--- a/web/main.html
+++ b/web/main.html
@@ -10,8 +10,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="icon" type="image/png" href="/img/icon.png">
-    <link rel="stylesheet" href="/css/styles.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="lib/bootstrap/bootstrap.min.css">
+
+    <link rel="icon" type="image/png" href="img/icon.png">
+    <link rel="stylesheet" href="css/styles.css">
 
     <title>ManagePass</title>
 </head>
@@ -39,8 +42,11 @@
     </main>
     <footer></footer>
 
+    <!-- Bootstrap JS -->
+    <script src="lib/bootstrap/bootstrap.bundle.min.js"></script>
+
     <!-- Optional JavaScript -->
     <script src="eel.js"></script>
-    <script src="/js/scripts.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
