--- a/web/main.html
+++ b/web/main.html
@@ -1,6 +1,5 @@
 <!--
     TODO: Добавить кнопки выхода в меню
-    TODO: Подключить Bootstrap
 -->
 
 <!DOCTYPE html>
@@ -21,23 +20,29 @@
 <body>
     <header></header>
     <main>
-        <div class="name">
-            <input type="text" placeholder="Название сайта" required="">
-        </div>
-        <div class="link">
-            <input type="text" placeholder="Ссылка на сайт" required="">
-        </div>
-        <div class="login">
-            <input type="text" placeholder="Логин/Почта/Номер" required="">
-        </div>
-        <div class="password">
-            <input type="text" placeholder="Пароль" required="">
-        </div>
-        <div class="info">
-            <textarea placeholder="Доп. информация"></textarea>
-        </div>
-        <div>
-            <button>Сохранить данные!</button>
+        <div class="main">
+            <div class="container text-center">
+                <form action="">
+                    <div class="name">
+                        <input type="text" class="form-control" placeholder="Название сайта" required="">
+                    </div>
+                    <div class="url">
+                        <input type="url" class="form-control" placeholder="URL сайта" required="">
+                    </div>
+                    <div class="login">
+                        <input type="text" class="form-control" placeholder="Логин/Почта/Номер" required="">
+                    </div>
+                    <div class="password">
+                        <input type="password" class="form-control" placeholder="Пароль" required="">
+                    </div>
+                    <div class="info">
+                        <textarea class="form-control" placeholder="Доп. информация"></textarea>
+                    </div>
+                    <div class="save-btn">
+                        <button type="button" class="btn btn-success">Сохранить данные!</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </main>
     <footer></footer>
