Подключение БД и создание скрипта для ее управления, переименование функций

--- a/web/main.html
+++ b/web/main.html
@@ -41,7 +41,7 @@
                         <textarea id="info" class="form-control" placeholder="Доп. информация"></textarea>
                     </div>
                     <div class="save">
-                        <button type="button" id="save" class="btn btn-success" onclick="godata()">Сохранить данные!</button>
+                        <button type="button" id="save" class="btn btn-success" onclick="sendData()">Сохранить данные!</button>
                     </div>
                     <div id="warning">
                         Заполните все обязательные поля!
